<resources>
    <string name="app_name">Falcone-Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="princes_found_on">Congratulations! Princess found on %s</string>
    <string name="princes_not_found">404! Princess not found</string>
    <string name="find_falcone">Find Falcone!</string>
    <string name="next">Next</string>
    <string name="destination_planet">"Destination Planet %1$s  : "</string>
    <string name="some_thing_went_wrong">Some thing went wrong !</string>
    <string name="finding_falcone">Finding Falcone!</string>
    <string name="please_wait">Please wait...</string>
    <string name="time_taken_100">Time taken : 100</string>
    <string name="start_again">Start Again</string>
    <string name="choose_your_vehicle">Choose your vehicle :</string>
    <string name="destination_planet_1">Destination Planet 1 :</string>
    <string name="previous">Previous</string>
</resources>