<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".framework.presentation.falcone_finder.FalconeFinderFragment">


    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:fontFamily="@font/emblema_one"
        android:gravity="center"
        android:text="@string/finding_falcone"
        android:textAlignment="center"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/please_wait"
        android:textAlignment="center"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <TextView
        android:id="@+id/timeTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/time_taken_100"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status" />

    <ImageView
        android:id="@+id/planetImage"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_300dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_150dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:padding="@dimen/_10dp"
        android:src="@drawable/final_planets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeTaken" />

    <Button
        android:id="@+id/startAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_50dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/start_again"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>